added signup form css:

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -7,8 +7,7 @@
     align-items: center;
     height: 100px;
     border-bottom: 1px solid #382618;
-    margin: 0;
-    width: auto;
+    width: 100vw;
     background-color: whitesmoke;
 }
 
