--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,4 +5,9 @@
 
  body {
      margin: 0;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     width: 100vw;
+     height: auto;
  }
