--- a/frontend/src/components/SignUpForm/signupform.css
+++ b/frontend/src/components/SignUpForm/signupform.css
@@ -1,4 +1,5 @@
 
+
 .sign-up-container {
   display: flex;
   flex-direction: column;
@@ -13,11 +14,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid #382618;
+  border: 1px solid #ece0d7;
   width: 420px;
   height: 800px;
   border-radius: 5px;
-  padding: 10px;
+  padding: 40px;
+  background-color: #f3ecdf;
 }
 
 input {
@@ -25,29 +27,62 @@ input {
   border-radius: 5px;
   border: 1px whitesmoke;
   height: 30px;
+  margin-left: 10px;
 }
 
 .header {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
   color: #382618;
   width: 300px;
-  padding: 40px;
+  margin-top: 20px;
+  font-size: larger;
+  font-weight: bolder;
+  /* background-image: url('/public/images/grogu-bg.jpg');
+  background-position-x: right; */
 }
 
 .input-fields {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   background-color: #d2c9b7;
   padding: 20px 40px;
   height: 300px;
   border-radius: 15px;
+  box-shadow: 0px 10px 10px 1px #aaa18f;
+  color: #382618;
+}
+
+label {
+  font-family: Ubuntu;
+  color: #382618;
+  font-weight: lighter;
+  margin-left: 20px;
 }
 
 .create-user {
+  font-family: Ubuntu;
+  font-size: large;
   background-color: #382618;
   color: white;
-  height: 30px;
-  margin: 10px;
+  height: 50px;
+  margin-top: 30px;
   width: 300px;
+}
+
+.cancel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  width: 300px;
+  margin-left: 10px;
+}
+
+div.cancel Link {
+  text-decoration: none;
 }
