--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,8 @@
 /* TODO Add site wide styles */
- * {
-     font-family: Helvetica;
- }
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
 
- body {
+body {
+     font-family: Ubuntu;
      margin: 0;
      display: flex;
      flex-direction: column;
