--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -9,12 +9,14 @@
     border-bottom: 1px solid #382618;
     width: 100vw;
     background-color: whitesmoke;
+    position: sticky;
+    top: 0;
 }
 
 .logo img {
     height: 80px;
     margin-top: 2px;
-    margin-left: 125px;
+    margin-left: 135px;
     position: absolute;
     left: 0;
     top: 0;
@@ -23,20 +25,18 @@
 .logo {
     display: flex;
     align-items: center;
-    position: fixed;
-    margin-left: 30px;
-    left: 0;
-    top: 0;
+    padding: 10px;
 }
 
 .buttons-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: fixed;
+    /* position: fixed;
     right: 0;
-    top: 0;
-    margin: 30px 30px;
+    top: 0; */
+    /* margin: 30px 30px; */
+    box-sizing: border-box;
 }
 
 button {
@@ -84,8 +84,8 @@ h3 {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 40%;
-    margin-right: 40%;
+    /* margin-left: 40%;
+    margin-right: 40%; */
 }
 
 .search input {
