--- a/frontend/src/components/SignUpForm/signupform.css
+++ b/frontend/src/components/SignUpForm/signupform.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Quicksand&display=swap');
 
 .sign-up-container {
   display: flex;
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   background-color: whitesmoke;
-  height: 100vh;
+  height: auto;
   width: 100vw;
 }
 
@@ -16,9 +16,9 @@
   align-items: center;
   border: 1px solid #ece0d7;
   width: 420px;
-  height: 800px;
+  height: 100vh;
   border-radius: 5px;
-  padding: 40px;
+  padding: 0px 40px;
   background-color: #f3ecdf;
 }
 
@@ -28,22 +28,25 @@ input {
   width: 300px;
   border-radius: 5px;
   border: 1px whitesmoke;
-  height: 30px;
+  height: 60px;
   margin-left: 10px;
+  margin-top: 20px;
 }
 
-.header {
+.sign-up-header {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
   color: #382618;
   width: 300px;
-  margin-top: 20px;
+  margin-bottom: 0;
   font-size: larger;
   font-weight: bolder;
-  /* background-image: url('/public/images/grogu-bg.jpg');
-  background-position-x: right; */
+  background-image: url('/public/images/Icon.png');
+  background-position-x: right;
+  background-size: 150px;
+  background-repeat: no-repeat;
 }
 
 .input-fields {
@@ -52,7 +55,7 @@ input {
   align-items: flex-start;
   justify-content: center;
   background-color: #d2c9b7;
-  padding: 20px 40px;
+  padding: 10px 20px;
   height: 300px;
   border-radius: 15px;
   box-shadow: 0px 10px 10px 1px #aaa18f;
@@ -71,9 +74,14 @@ label {
   font-size: large;
   background-color: #382618;
   color: white;
-  height: 50px;
+  height: 100px;
   margin-top: 30px;
   width: 300px;
+}
+
+.create-user:hover {
+  background-color: whitesmoke;
+  color: #382618;
 }
 
 .cancel {
@@ -87,4 +95,8 @@ label {
 
 div.cancel Link {
   text-decoration: none;
+}
+
+a {
+  color: #382618;
 }
