--- a/frontend/src/components/SignUpForm/signupform.css
+++ b/frontend/src/components/SignUpForm/signupform.css
@@ -22,6 +22,14 @@
   background-color: #f3ecdf;
 }
 
+.signup-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  margin-left: 10px;
+}
+
 input {
   display: flex;
   justify-content: center;
@@ -56,7 +64,7 @@ input {
   justify-content: center;
   background-color: #d2c9b7;
   padding: 10px 20px;
-  height: 300px;
+  height: 350px;
   border-radius: 15px;
   box-shadow: 0px 10px 10px 1px #aaa18f;
   color: #382618;
