--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -50,6 +50,7 @@ label {
   background-position-x: right;
   background-size: 150px;
   background-repeat: no-repeat;
+  margin-top: 200px;
 }
 
 p {
