--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,8 @@ body {
      display: flex;
      flex-direction: column;
      align-items: center;
-     width: 100vw;
+     width: auto;
      height: auto;
+     box-sizing: border-box;
+     overflow-x: hidden;
  }
