started on modal

--- a/frontend/src/components/SignUpForm/signupform.css
+++ b/frontend/src/components/SignUpForm/signupform.css
@@ -52,8 +52,8 @@ input {
   font-size: larger;
   font-weight: bolder;
   background-image: url('/public/images/Icon.png');
-  background-position-x: right;
-  background-size: 150px;
+  background-position-x: 120%;
+  background-size: 130px;
   background-repeat: no-repeat;
   margin-top: 200px;
 }
