--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   background-color: whitesmoke;
-  height: 100vh;
+  height: auto;
   width: 100vw;
   margin-top: 0;
 }
@@ -16,7 +16,7 @@
   align-items: center;
   background-color: whitesmoke;
   height: 100vh;
-  width: 420px;
+  width: 600px;
   margin-top: 0;
   background-color: #f3ecdf;
   padding: 40px;
@@ -33,8 +33,8 @@
   font-size: larger;
   font-weight: bolder;
   background-image: url('/public/images/Icon.png');
-  background-position-x: right;
-  background-size: 150px;
+  background-position-x: 120%;
+  background-size: 130px;
   background-repeat: no-repeat;
   margin-bottom: 40px;
 }
@@ -49,12 +49,13 @@ h1 {
 }
 
 h4 {
-  margin-left: 40px;
   margin-bottom: 0;
 }
 
 .splash-header {
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   width: 400px;
   border: 1px solid white;
@@ -65,9 +66,11 @@ h4 {
   margin-top: -40px;
 }
 
-.splash-header p {
-  font-family: Ubuntu;
-  font-weight: lighter;
+.splash-header-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 .splash-sign-up {
