--- a/frontend/src/components/BusinessList/BusinessList.css
+++ b/frontend/src/components/BusinessList/BusinessList.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
+
+* {
+  font-family: Ubuntu;
+}
+
 .shop-list-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -6,8 +12,12 @@
   background-color: #f3ecdf;
 }
 
-.profile-body {
-  padding: 0px 50px;
+.selected-shop {
+  padding: 0 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .shop-list {
@@ -34,7 +44,6 @@
   align-items: flex-start;
   width: 75%;
   padding: 0px 20px;
-  margin-left: 100px;
   background-color: white;
   border-radius: 25px;
   margin-top: -40px;
@@ -42,4 +51,19 @@
 
 .shop-info h6 {
   margin-top: 0;
+}
+
+.selected-shop-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  padding: 20px 20px;
+  background-color: white;
+  border-radius: 25px;
+  margin-top: -90px;
+}
+
+.selected-shop-info h4 {
+  margin-bottom: 0;
 }
