--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -143,3 +143,20 @@ h3 {
     color: whitesmoke;
     cursor: pointer;
   }
+
+  NavLink {
+    text-decoration: none;
+  }
+
+  .menu {
+    background-color: #382618;
+    color: white;
+    height: 30px;
+    font-family: Ubuntu;
+  }
+
+  .menu:hover {
+    background-color: #d2c9b7;
+    color: whitesmoke;
+    cursor: pointer;
+  }
