added default profile and default store logo

--- a/frontend/src/components/CreateBusinessForm/CreateBusiness.css
+++ b/frontend/src/components/CreateBusinessForm/CreateBusiness.css
@@ -5,7 +5,7 @@
   align-items: center;
   background-color: whitesmoke;
   height: auto;
-  width: 100vw;
+  width: 100%;
 }
 
 .create-business-header {
