--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -7,7 +7,7 @@
     align-items: center;
     height: 75px;
     border-bottom: 1px solid #382618;
-    width: auto;
+    width: 100vw;
     background-color: whitesmoke;
     position: sticky;
     top: 0;
