--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,8 +7,7 @@ body {
      display: flex;
      flex-direction: column;
      align-items: center;
-     width: auto;
-     height: auto;
+     width: 100%;
+     height: 100%;
      box-sizing: border-box;
-     overflow-x: hidden;
  }
