--- a/frontend/src/components/CreateBusinessForm/CreateBusiness.css
+++ b/frontend/src/components/CreateBusinessForm/CreateBusiness.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   background-color: whitesmoke;
-  height: auto;
+  height: 100vh;
   width: 100%;
 }
 
@@ -14,15 +14,16 @@
   align-items: flex-start;
   justify-content: space-between;
   color: #382618;
-  width: 300px;
+  width: 490px;
   margin-bottom: 0;
   font-size: larger;
   font-weight: bolder;
   background-image: url('/public/images/Icon.png');
-  background-position-x: 120%;
-  background-size: 130px;
+  background-position-x: 85%;
+  background-size: 100px;
   background-repeat: no-repeat;
-  margin-top: 200px;
+  margin-left: 20px;
+  padding: 10px;
 }
 
 .create-business-input-fields {
@@ -63,4 +64,18 @@ textarea {
   margin-left: 10px;
   height: 100px;
   width: 300px;
+}
+
+.create-shop-cancel {
+  font-family: Ubuntu;
+  font-size: large;
+  background-color: #d2c9b7;
+  color: #382618;
+  height: 50px;
+  width: 300px;
+}
+
+.create-shop-cancel:hover {
+  cursor: pointer;
+  color: white;
 }
