--- a/frontend/src/components/EditBusinessForm/EditBusiness.css
+++ b/frontend/src/components/EditBusinessForm/EditBusiness.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   background-color: whitesmoke;
-  height: auto;
+  height: 100vh;
   width: 100%;
 }
 
@@ -23,7 +23,6 @@
   background-position-x: 60%;
   background-size: 100px;
   background-repeat: no-repeat;
-  margin-top: 200px;
   margin-left: 20px;
   padding: 10px;
 }
@@ -34,7 +33,7 @@
   align-items: center;
   justify-content: center;
   background-color: #d2c9b7;
-  padding: 10px 20px;
+  padding: 20px 20px;
   height: 650px;
   border-radius: 15px;
   box-shadow: 0px 10px 10px 1px #aaa18f;
@@ -55,6 +54,21 @@
 .edit-shop-button:hover {
   background-color: whitesmoke;
   color: #382618;
+}
+
+.edit-cancel-button {
+  font-family: Ubuntu;
+  font-size: large;
+  background-color: #d2c9b7;
+  color: #382618;
+  height: 50px;
+  margin-top: 10px;
+  width: 300px;
+}
+
+.edit-cancel-button:hover {
+  cursor: pointer;
+  color: white;
 }
 
 input {
