--- a/frontend/src/components/BusinessList/BusinessList.css
+++ b/frontend/src/components/BusinessList/BusinessList.css
@@ -36,7 +36,7 @@
 .shop-list-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: #f3ecdf;
 }
@@ -51,8 +51,9 @@
 
 .shop-list {
   overflow-y: scroll;
-  height: 100vh;
+  height: 100%;
   padding: 0px 100px;
+  width: 100%;
 }
 
 .shop-list::-webkit-scrollbar {
@@ -88,12 +89,14 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   padding: 40px 20px;
   background-color: white;
   border-radius: 25px;
   margin-top: -40px;
 }
+
+
 
 .selected-shop-info h4 {
   margin-bottom: 0;
@@ -140,6 +143,20 @@
   padding: 20px;
 }
 
+.add-review {
+  background-color: #382618;
+  color: white;
+  height: 30px;
+  font-family: Ubuntu;
+  margin-bottom: 10px;
+}
+
+.add-review:hover {
+  background-color: #d2c9b7;
+  cursor: pointer;
+  color: #382618;
+}
+
 .reviews-box {
   display: flex;
   flex-direction: column;
@@ -152,7 +169,12 @@
   margin-bottom: 50px;
   border: 1px solid #d2c9b7;
   background-color: #d2c9b7;
-  padding: 10px;
+  padding: 100px 0;
+  overflow-y: scroll;
+}
+
+.reviews-box::-webkit-scrollbar {
+  display: none;
 }
 
 .reviews-box-header {
