--- a/frontend/src/components/BusinessList/BusinessList.css
+++ b/frontend/src/components/BusinessList/BusinessList.css
@@ -180,13 +180,13 @@
 .reviews-box-header {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   padding: 30px;
   margin-top: 0;
   background-color: whitesmoke;
   width: 74%;
-  height: 50px;
+  height: 200px;
   border-radius: 15px;
 }
 
@@ -216,4 +216,21 @@
 
 .review-content {
   padding: 20px;
+}
+
+.add-review-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.review-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 500px;
+  background-color: whitesmoke;
 }
