--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -7,14 +7,16 @@
     align-items: center;
     height: 75px;
     border-bottom: 1px solid #382618;
-    width: 100%;
+    width: 100vw;
     position: sticky;
     top: 0;
+    padding: 0;
   }
 
 .nav-container {
   background-color: whitesmoke;
-  width: 100vw;
+  width: 100%;
+  padding: 0;
 }
 
 .logo img {
