--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,6 +10,7 @@ body {
      width: 100%;
      height: 100%;
      box-sizing: border-box;
+     overflow-x: hidden;
  }
 
  html {
@@ -17,6 +18,7 @@ body {
      box-sizing: border-box;
      background-color: #f3ecdf;
      width: 100%;
+     margin: 0;
  }
 
  .app-container {
@@ -24,4 +26,5 @@ body {
      box-sizing: border-box;
      width: 100%;
      background-color: whitesmoke;
+     margin:0;
  }
