--- a/frontend/src/components/BusinessList/BusinessList.css
+++ b/frontend/src/components/BusinessList/BusinessList.css
@@ -96,8 +96,6 @@
   margin-top: -40px;
 }
 
-
-
 .selected-shop-info h4 {
   margin-bottom: 0;
 }
@@ -165,17 +163,21 @@
   background-color: white;
   height: auto;
   width: 100%;
+  height: 100vh;
   border-radius: 15px;
   margin-bottom: 50px;
   border: 1px solid #d2c9b7;
   background-color: #d2c9b7;
-  padding: 100px 0;
+  padding: 100px 0px;
   overflow-y: scroll;
+  box-sizing: border-box;
 }
 
 .reviews-box::-webkit-scrollbar {
   display: none;
 }
+
+
 
 .reviews-box-header {
   display: flex;
@@ -183,10 +185,9 @@
   align-items: center;
   justify-content: center;
   padding: 30px;
-  margin-top: 0;
   background-color: whitesmoke;
   width: 74%;
-  height: 200px;
+  height: 250px;
   border-radius: 15px;
 }
 
@@ -196,8 +197,10 @@
   align-items: center;
   background-color: whitesmoke;
   width: 80%;
+  /* height: 50%; */
   border-radius: 15px;
   margin: 5px;
+  padding: 20px;
 }
 
 .review-profile {
@@ -218,7 +221,7 @@
   padding: 20px;
 }
 
-.add-review-container {
+.review-form-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -231,6 +234,5 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 500px;
   background-color: whitesmoke;
 }
