--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -6,7 +6,7 @@
     justify-content: space-between;
     align-items: center;
     height: 75px;
-    border-bottom: 1px solid #382618;
+    border-bottom: 1px solid #d2c9b7;
     width: 100vw;
     position: sticky;
     top: 0;
