--- a/frontend/src/components/SignUpForm/signupform.css
+++ b/frontend/src/components/SignUpForm/signupform.css
@@ -15,7 +15,7 @@
   flex-direction: column;
   align-items: center;
   border: 1px solid #ece0d7;
-  width: 420px;
+  width: 100%;
   height: 100vh;
   border-radius: 5px;
   padding: 0px 40px;
@@ -61,11 +61,11 @@ input {
 .input-fields {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   background-color: #d2c9b7;
   padding: 10px 20px;
-  height: 350px;
+  height: auto;
   border-radius: 15px;
   box-shadow: 0px 10px 10px 1px #aaa18f;
   color: #382618;
@@ -83,7 +83,7 @@ label {
   font-size: large;
   background-color: #382618;
   color: white;
-  height: 100px;
+  height: 50px;
   margin-top: 30px;
   width: 300px;
 }
@@ -108,4 +108,8 @@ div.cancel Link {
 
 a {
   color: #382618;
+}
+
+.sign-up-input {
+  height: 30px;
 }
