--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   background-color: whitesmoke;
-  height: auto;
+  height: 100vh;
   width: 100%;
   margin-top: 0;
 }
@@ -15,11 +15,16 @@
   justify-content: center;
   align-items: center;
   background-color: whitesmoke;
-  height: 100vh;
-  width: 600px;
-  margin-top: 0;
+  height: 100%;
+  width: 100%;
   background-color: #f3ecdf;
-  padding: 40px;
+  overflow-y: scroll;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+}
+
+.splash-body::-webkit-scrollbar {
+  display: none;
 }
 
 .splash-page-header{
