--- a/frontend/src/components/BusinessList/BusinessList.css
+++ b/frontend/src/components/BusinessList/BusinessList.css
@@ -298,7 +298,7 @@ textarea {
   margin-bottom: 20px;
   height: 20px;
   position: absolute;
-  top: 15px;
+  top: 18px;
   left: 50%;
 }
 
@@ -318,4 +318,32 @@ textarea {
   background-color: #d2c9b7;
   color:#382618;
   cursor: pointer;
+}
+
+.search-results {
+  display: none;
+}
+
+.show {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  position: absolute;
+  top: 34px;
+  width: 200px;
+  height: 400px;
+  overflow-y:scroll;
+}
+
+.search-result {
+  cursor: pointer;
+}
+
+.show h6 {
+  margin-bottom: 0;
+}
+
+.show::-webkit-scrollbar {
+  display: none;
 }
