--- a/frontend/src/components/BusinessList/BusinessList.css
+++ b/frontend/src/components/BusinessList/BusinessList.css
@@ -91,6 +91,11 @@
   justify-content: center;
   align-items: center;
   padding: 0px 20px;
+  transition-duration: 0.5s;
+}
+
+.shop-box:hover {
+
 }
 
 .shop-info {
@@ -103,6 +108,11 @@
   border-radius: 25px;
   margin-top: -30px;
   margin-bottom: 20px;
+}
+
+.shop-info:hover {
+   box-shadow: 0px 10px 10px 1px #aaa18f;
+   transform: scale(1.1);
 }
 
 .shop-info h6 {
@@ -266,10 +276,12 @@
   background-color: whitesmoke;
 }
 
-textarea {
-  border: 2mm ridge whitesmoke;
+.reviews-box-header textarea {
+  border: 1mm ridge whitesmoke;
   border-radius: 15px;
   margin-bottom: 2px;
+  width:300%;
+  height: 100px;
 }
 
 .delete-review {
