--- a/frontend/src/components/CreateBusinessForm/CreateBusiness.css
+++ b/frontend/src/components/CreateBusinessForm/CreateBusiness.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: whitesmoke;
+  background-color: #f3ecdf;
   height: 100vh;
   width: 100%;
 }
