--- a/frontend/src/components/SignUpForm/signupform.css
+++ b/frontend/src/components/SignUpForm/signupform.css
@@ -8,13 +8,13 @@
   background-color: whitesmoke;
   height: auto;
   width: 100%;
+  margin-top: 80px;
 }
 
 .sign-up-form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid #ece0d7;
   width: 100%;
   height: 100vh;
   border-radius: 5px;
