--- a/frontend/src/components/CreateBusinessForm/CreateBusiness.css
+++ b/frontend/src/components/CreateBusinessForm/CreateBusiness.css
@@ -49,6 +49,7 @@
   height: 50px;
   margin-top: 30px;
   width: 300px;
+  transition: all 0.5s ease-out;
 }
 
 .create-shop-button:hover {
@@ -76,6 +77,7 @@ input {
   color: #382618;
   height: 50px;
   width: 300px;
+  transition: all 0.5s ease-out;
 }
 
 .create-shop-cancel:hover {
