--- a/frontend/src/components/DeleteBusiness/DeleteBusiness.css
+++ b/frontend/src/components/DeleteBusiness/DeleteBusiness.css
@@ -13,6 +13,7 @@
   height: 30px;
   font-family: Ubuntu;
   margin-bottom: 10px;
+  transition: all 0.5s ease-out;
 }
 
 .delete-business-button:hover {
@@ -41,6 +42,7 @@
   height: 30px;
   font-family: Ubuntu;
   margin-bottom: 10px;
+  transition: all 0.5s ease-out;
 }
 
 .yes-button:hover {
