--- a/frontend/src/components/BusinessList/BusinessList.css
+++ b/frontend/src/components/BusinessList/BusinessList.css
@@ -107,6 +107,7 @@
   border-radius: 25px;
   margin-top: -30px;
   margin-bottom: 20px;
+  transition: all 0.5s ease-out;
 }
 
 .shop-info:hover {
@@ -341,11 +342,12 @@
 }
 
 .search-results {
-  display: none;
+  visibility: hidden;
+  transition: all 0.5s ease-out;
 }
 
 .show {
-  display: flex;
+  visibility: visible;
   background-color: whitesmoke;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   display: flex;
@@ -360,6 +362,20 @@
   overflow-y:scroll;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
+  transition: all 0.2s ease-in;
+}
+
+.hide {
+  visibility: hidden;
+  position: absolute;
+  top: 58px;
+  width: 160px;
+  height: 100px;
+  padding: 40px;
+  overflow-y:scroll;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  transition: all 0.1s ease-in;
 }
 
 .search-result {
@@ -376,8 +392,13 @@
 
 .show h6:hover {
   background-color: white;
+  transition: all 0.5s ease-out;
 }
 
 .show::-webkit-scrollbar {
+  display: none;
+}
+
+.hide::-webkit-scrollbar {
   display: none;
 }
