--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -86,6 +86,7 @@ h4 {
   font-size: larger;
   font-weight: bolder;
   font-family: Ubuntu;
+  transition: all 0.5s ease-out;
 }
 
 .splash-sign-up a{
