--- a/frontend/src/components/footer/footer.css
+++ b/frontend/src/components/footer/footer.css
@@ -14,6 +14,7 @@
 .popup {
     display: inline-block;
     position: relative;
+    transition: all 0.5s ease-out;
 }
 
 .popup-box {
@@ -21,6 +22,7 @@
     position: absolute;
     z-index: 1;
     bottom: 26px;
+    transition: all 0.5s ease-out;
 }
 
 
@@ -31,12 +33,14 @@
     height: 100px;
     padding: 20px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    transition: all 0.5s ease-out;
 }
 
 .show-info > a {
     text-decoration: none;
     width: 100%;
     padding:10px 10px;
+    transition: all 0.5s ease-out;
 }
 
 .show-info > a:hover {
@@ -46,5 +50,6 @@
 
 .pop-up-button:hover {
     cursor: pointer;
-    color: #d2c9b7
+    color: #d2c9b7;
+    transition: all 0.5s ease-out;
 }
