--- a/frontend/src/components/BusinessList/BusinessList.css
+++ b/frontend/src/components/BusinessList/BusinessList.css
@@ -388,13 +388,16 @@
   width: 100%;
   height: 100%;
   padding: 10px 10px;
+  border-radius: 15px;
 }
 
 .show h6:hover {
-  background-color: white;
+  background-color: #d2c9b7;
   transition: all 0.5s ease-out;
-  font-weight: bolder;
+  width: 120%;
+  border-radius: 15px;
   font-size: 13px;
+  color: #382618;
   width: auto;
 }
 
