--- a/frontend/src/components/BusinessList/BusinessList.css
+++ b/frontend/src/components/BusinessList/BusinessList.css
@@ -124,7 +124,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: auto;
   padding: 40px 20px;
   background-color: white;
   border-radius: 25px;
@@ -304,7 +304,7 @@
   border: 1mm ridge whitesmoke;
   border-radius: 15px;
   margin-bottom: 2px;
-  width:200%;
+  width:100%;
   height: 100px;
 }
 
